fix iphone 16 layout issue

--- a/app/birdhouse/style-iphone.css
+++ b/app/birdhouse/style-iphone.css
@@ -89,6 +89,11 @@
 
 /* iPhone 16pro ------------------------------------------ */
 
+@media only screen and (device-width : 402px) {
+    .setting_bg.header              { width : 366px; }
+    .frame_column.wide              { width : 366px; }
+    }
+
 @media only screen and (device-width : 402px) and (device-height : 874px) and (orientation : portrait) {
 
     .frame_column.wide              { width : 366px; }
